<package format="2">
  <name>qb_softhand_industry_description</name>
  <version>2.1.2</version>  
  <description>
    This package contains the ROS description for qbrobotics® SoftHand INdustry device.
  </description>
  <author>qbrobotics®</author>
  <maintainer email="support@qbrobotics.com">Support Team</maintainer>
  <license>BSD 3-Clause</license>

  <url type="repository">https://bitbucket.org/qbrobotics/qbshin-ros</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <architecture_independent/>
    <build_type>ament_cmake</build_type>
  </export>
</package>
