<package format="2">
  <name>qb_softhand_industry</name>
  <version>2.1.2</version>
  <description>
    This package contains the ROS interface for qbrobotics® SoftHand INdustry device.
  </description>
  <author>qbrobotics®</author>
  <maintainer email="support@qbrobotics.com">Support Team</maintainer>
  <license>BSD 3-Clause</license>

  <url type="repository">https://bitbucket.org/qbrobotics/qbshin-ros</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>qb_softhand_industry_driver</exec_depend>
  <exec_depend>qb_softhand_industry_description</exec_depend>
  <exec_depend>qb_softhand_industry_ros2_control</exec_depend>

  <export>
    
    <build_type>ament_cmake</build_type>
  </export>
</package>
