<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qb_softhand_industry_msgs</name>
  <version>2.1.2</version>
  <description>
    This package contains the ROS messages for qbrobotics® SoftHand Industry.
  </description>
  <author>qbrobotics®</author>
  <maintainer email="support@qbrobotics.com">Support Team</maintainer>
  <license>BSD 3-Clause</license>

  <url type="repository">https://bitbucket.org/qbrobotics/qbshin-ros</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <architecture_independent/>
    <build_type>ament_cmake</build_type>
  </export>
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
